<resources>
    <string name="app_name">Health</string>
    <string name="next">Далее</string>
    <string name="empty_error">Поле не может быть пустым</string>
    <string name="empty" />

    <!-- OnBoardingGender -->
    <string name="gender_man">Мужской</string>
    <string name="gender_woman">Женский</string>
    <string name="gender_title">Выбор пола</string>

    <!-- OnBoardingDailyActivity -->
    <string name="daily_activity_title">Коэффициент ежедневной активности</string>
    <string name="description_min">Для малоподвижных людей, тренировок мало или они отсутствуют.</string>
    <string name="description_pre_min">Для людей с низкой активностью, легкие тренировки 1-3 раза в неделю или в виде эквивалента другой активности.</string>
    <string name="description_average">Для умеренно активных людей: физическая работа средней тяжести или регулярные тренировки 3-5 дней в неделю.</string>
    <string name="description_pre_max">Для очень активных людей: физическая работа полный день или интенсивные тренировки 6-7 раз в неделю.</string>
    <string name="description_max">Для предельно активных людей: тяжелая физическая работа и интенсивные тренировки занятия спортом.</string>
    <string name="amount_calories_hint">Введите количество каллорий</string>

    <!-- OnBoardingCharacters -->
    <string name="characters_title">Персональные данные</string>
    <string name="characters_age">Ваш возраст, лет</string>
    <string name="characters_height">Ваш рост, см</string>
    <string name="characters_weight">Ваш вес, кг</string>

    <!-- OnBoardingPurpose -->
    <string name="purpose_toolbar_title">Выбор цели</string>
    <string name="purpose_weight_loss">Похудение</string>
    <string name="purpose_weight_save">Сохранение веса / Рекомпозиция</string>
    <string name="purpose_weight_gain">Набор веса / Мышечной массы</string>
    <string name="purpose_title">Цель</string>
    <string name="sickness_title">Есть ли у вас гормональные нарушения?</string>
    <string name="sickness_absent">Нет / Никогда не сдавал анализы</string>
    <string name="sickness_hypothyroidism">Гипотиреоз</string>
    <string name="sickness_leptin_resistance">Лептинорезистентность / Инсулинорезистентность</string>
    <string name="sickness_deficiencies">Дефициты половых гормонов и различные активные компенсаторные механизмы</string>
    <string name="sickness_endocrine">Различные эндокринные нарушения</string>
    <string name="sickness_description"><u>Посмотреть симптомы</u></string>

    <!-- OnBoardingSymptoms -->
    <string name="symptoms_title">Симптомы гормональных нарушений</string>
    <string name="symptoms_deficiencies">1. В12-, железо-, дефицитная анемия слабость, повышенная утомляемость, нарушение кроветворения (бледность и желтушность кожи и слизистых оболочек, учащенное сердцебиение, боли в сердце, пепереносимость физических нагрузок, головокружение и частые обмороки, увеличение селезенки), поражение пищеварительной системы (нарушение пищеварения, неустойчивый стул, снижение аппетита, снижение массы тела, изменение цвета и формы языка, нарушение вкуса, часты инфекции полости рта, боль в животе после еды), поражение нервной системы (нарушение чувствительности, парестезия, атаксия, снижение мышечной силы, нарушение мочеиспускания, нарушение психики).</string>
    <string name="symptoms_hypothyroidism">2. Гипотиреоз\nСнижение физической и умственной работоспособности, повышенная утомляемость, изменения кожи (микседема), повышенная чувствительность к холоду, осиплость голоса, прибавка в весе, отёчность лица и тела, запоры, гипотония и брадикардия, сонливость, снижение памяти и интеллекта), у детей задержка роста и интеллектуального развития.</string>
    <string name="symptoms_leptin_resistance">3. Метаболический синдром (Инсулинорезистентность)\nУвеличение массы тела в абдоминальной области, нарушение лиричного обмена, инсулинорезистентность. Субъективные ощущения: приступы плохого настроения в голодном состоянии, повышенная утомляемость, избирательность в еде, приступы учащенного сердцебиения, боли в сердце, головная боль, жажда и сухость во рту, повышенная потливость.</string>

    <!-- Home -->
    <string name="home_title">Цель на день</string>
    <string name="daily_purpose_title">Для достижения вашей ежедневной цели необходимо:</string>
    <string name="body_mass_index_title">Ваш индекс массы тела:</string>
    <string name="daily_calories_title">За сегодня вы употребили:</string>
    <string name="add_daily_calories">Добавить данные</string>
    <string name="hint_user">Помните, что ежедневаные данные обновяются, каждый день!</string>
    <string name="calories">%s ккал</string>
    <string name="protein">%s г. белков</string>
    <string name="fats">%s г. жиров</string>
    <string name="crabs">%s г. углеводов</string>
    <string name="purpose">Ваша цель:</string>

    <!-- AddPfc -->
    <string name="add_pfc_title">Добавление данных</string>
    <string name="enter_calories">Введите количесвто калорий</string>
    <string name="enter_protein">Введите количесвто белков</string>
    <string name="enter_fats">Введите количесвто жиров</string>
    <string name="enter_carbs">Введите количесвто углеводов</string>
</resources>
