<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:elevation="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolBar"
            style="@style/TitleToolbar.TextWhite"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:title="@string/purpose_toolbar_title" />

    </com.google.android.material.appbar.AppBarLayout>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvTitlePurpose"
        style="@style/Text.Black.18"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_16"
        android:layout_marginTop="@dimen/dp_16"
        android:text="@string/purpose_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/appBar" />

    <RadioGroup
        android:id="@+id/rgPurpose"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dp_16"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvTitlePurpose">

        <RadioButton
            android:id="@+id/rbWeightLoss"
            style="@style/RadioButtonBlueBg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_8"
            android:text="@string/purpose_weight_loss" />

        <RadioButton
            android:id="@+id/rbWeightSave"
            style="@style/RadioButtonBlueBg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_4"
            android:text="@string/purpose_weight_save" />

        <RadioButton
            android:id="@+id/rbWeightGain"
            style="@style/RadioButtonBlueBg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_4"
            android:text="@string/purpose_weight_gain" />
    </RadioGroup>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvTitleSickness"
        style="@style/Text.Black.18"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_16"
        android:layout_marginTop="@dimen/dp_16"
        android:text="@string/sickness_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rgPurpose" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvSicknessDescription"
        style="@style/Text.Blue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dp_12"
        android:background="@drawable/ripple_effect"
        android:padding="@dimen/dp_4"
        android:text="@string/sickness_description"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvTitleSickness" />

    <RadioGroup
        android:id="@+id/rgSickness"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dp_16"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvSicknessDescription">

        <RadioButton
            android:id="@+id/rbAbsent"
            style="@style/RadioButtonBlueBg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_8"
            android:text="@string/sickness_absent" />

        <RadioButton
            android:id="@+id/rbHypothyroidism"
            style="@style/RadioButtonBlueBg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_4"
            android:text="@string/sickness_hypothyroidism" />

        <RadioButton
            android:id="@+id/rbLeptinResistance"
            style="@style/RadioButtonBlueBg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_4"
            android:text="@string/sickness_leptin_resistance" />

        <RadioButton
            android:id="@+id/rbDeficiencies"
            style="@style/RadioButtonBlueBg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_4"
            android:text="@string/sickness_deficiencies" />

        <RadioButton
            android:id="@+id/rbEndocrine"
            style="@style/RadioButtonBlueBg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_4"
            android:text="@string/sickness_endocrine" />
    </RadioGroup>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnNext"
        style="@style/OutlinedButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dp_16"
        android:text="@string/next"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
