<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:elevation="0dp">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolBar"
            style="@style/TitleToolbar.TextWhite"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:navigationIcon="@drawable/ic_arrow_back_24"
            app:title="@string/add_pfc_title" />
    </com.google.android.material.appbar.AppBarLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilAddCalories"
        style="@style/EditTextLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dp_16"
        android:layout_marginTop="@dimen/dp_16">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etAddCalories"
            style="@style/EditTextBg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_calories"
            android:inputType="number"
            android:maxLines="1" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilAddProtein"
        style="@style/EditTextLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dp_16"
        android:layout_marginTop="@dimen/dp_16">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etAddProtein"
            style="@style/EditTextBg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_protein"
            android:inputType="number"
            android:maxLines="1" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilAddFats"
        style="@style/EditTextLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dp_16"
        android:layout_marginTop="@dimen/dp_16">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etAddFats"
            style="@style/EditTextBg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_fats"
            android:inputType="number"
            android:maxLines="1" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilAddCarbs"
        style="@style/EditTextLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dp_16"
        android:layout_marginTop="@dimen/dp_16">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etAddCarbs"
            style="@style/EditTextBg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_carbs"
            android:inputType="number"
            android:maxLines="1" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnAddPfc"
        style="@style/OutlinedButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/dp_16"
        android:text="@string/add_daily_calories" />

</LinearLayout>