<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:elevation="0dp">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolBar"
            style="@style/TitleToolbar.TextWhite"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:title="@string/characters_title" />
    </com.google.android.material.appbar.AppBarLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilAge"
        style="@style/EditTextLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dp_16"
        android:layout_marginTop="@dimen/dp_16">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etAge"
            style="@style/EditTextBg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/characters_age"
            android:inputType="number"
            android:maxLength="3"
            android:maxLines="1" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilHeight"
        style="@style/EditTextLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dp_16"
        android:layout_marginTop="@dimen/dp_16">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etHeight"
            style="@style/EditTextBg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/characters_height"
            android:inputType="number"
            android:maxLength="3"
            android:maxLines="1" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilWeight"
        style="@style/EditTextLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dp_16"
        android:layout_marginTop="@dimen/dp_16">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etWeight"
            style="@style/EditTextBg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/characters_weight"
            android:inputType="numberDecimal"
            android:maxLength="5"
            android:maxLines="1" />
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="bottom|center">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnNext"
            style="@style/OutlinedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center"
            android:layout_marginBottom="@dimen/dp_16"
            android:text="@string/next" />
    </LinearLayout>

</LinearLayout>
